# scanalytics_report_etl

./: .env.example  .gitignore  README.md  check_schema.py  etl.py  etl_backfill.py  hello.py  init_date_load.py  pyproject.toml  transfer.py
docs/: etl.md  init_date_load.md  transfer.md
sample/: employees.csv  scan_report_daily.csv  scan_report_weekly.csv
src/: downloader.py  env.py  schema.py  spec.py  time_utils.py  transfer.py
