[project]
name = "scanalytics-report-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.2",
    "boto3>=1.34.0",
    "openpyxl>=3.1.2",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.40.39",
    "pandas-stubs>=2.3.2.250827",
    "pyright>=1.1.389",
    "ruff>=0.6.9",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",  # Pyflakes/pycodestyle errors
    "F",  # Pyflakes
    "W",  # pycodestyle warnings
    "B",  # flake8-bugbear
    "I",  # isort-compatible import sorting
    "UP", # pyupgrade
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
    "RUF",
]
ignore = [
    "B008",  # Allow function call defaults in dataclasses, common in ETL configs
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["."]
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
